# OogaBooga

./: .clinerules  .gitignore  Cargo.toml  README.md  build.rs  build.sh  cargo.toml
.cargo/: config.toml
memory-bank/: activeContext.md  alkanes-runtime-api.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: lib.rs  test_utils.rs  tests.rs
tests/: test_contract.rs
